feat: queries page
